# kaizen-security

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  readme-guard.yml  red-team.yml
deploy/: README.md
deploy/aws/: kaizen-sandbox.cfn.yaml
deploy/azure/: main.bicep
egress/: Dockerfile  README.md  proxy.py
examples/: README.md  refund_bot.py
examples/aca-sandbox/: README.md  run.py
examples/coding-agent/: README.md  run.py
examples/crewai/: README.md  run.py
examples/docker-sandbox/: README.md  run.py
examples/kaizen-sandbox/: README.md  aca_demo.py  collectors.py  detector.py  monitored_agent.py
examples/langchain/: README.md  run.py
examples/mcp/: README.md  run.py
examples/openai-agents/: README.md  run.py
examples/rag/: README.md  run.py
python/: README.md  pyproject.toml
python/kaizen_security/: __init__.py  client.py  engine.py  mcp_shim.py  models.py  report.py
python/kaizen_security/integrations/: __init__.py  bedrock.py  crewai.py  langchain.py  llamaindex.py  openai_agents.py  otel.py  pydantic_ai.py  semantic_kernel.py
python/tests/: test_engine.py  test_hardening.py  test_langchain.py  test_mcp_shim.py  test_more_adapters.py  test_openai_agents.py  test_otel.py
red-team/: README.md  corpus.py  test_corpus.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  engine.ts  index.ts  models.ts
(+6 files in other folders)
